Rename database and variable, update view add lecture

--- a/views/layouts/CreateCourseLayout.hbs
+++ b/views/layouts/CreateCourseLayout.hbs
@@ -21,8 +21,8 @@
 <!--        formElem.addEventListener('submit', async (e) => {-->
 <!--            e.preventDefault();-->
 <!--            // const __dirname = dirname(fileURLToPath(import.meta.url));-->
-<!--            console.log(__dirname);-->
-<!--            await fetch('/add', {-->
+<!--            //console.log(__dirname);-->
+<!--            await fetch('/addCourse', {-->
 <!--                method: 'POST',-->
 <!--                body: new FormData(formElem),-->
 <!--            });-->
