--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -1,6 +1,6 @@
 <!--Phan Huy profile view-->
 <div class="row rounded-14.5 shadow-lg rounded-20 border-info">
-    <div class="col-lg-12 mx-auto mt-3">
+    <div class="col-lg-10 mx-auto mt-3">
         <div class="bg-white shadow rounded overflow-hidden">
             <div class="px-3 pt-0 pb-4" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.bground}})">
                 <div class="media align-items-end">
@@ -59,7 +59,7 @@
                                                         <img src="https://drive.google.com/uc?export=view&id={{image}}" alt="" class="card-img-top">
                                                     <div class="card-body">
                                                         <h5 class="card-title">{{courseName}}</h5>
-                                                        {{{description}}}
+                                                        {{{tinydes}}}
                                                         <a href="/teacher/editCourse?id={{courseID}}" class="btn btn-outline-success btn-sm">Edit</a>
                                                         <a href="/teacher/delCourse?id={{courseID}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash"></i>Delete</a>
                                         </div>
