--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -1,6 +1,6 @@
 <!--Phan Huy profile view-->
-<div class="row rounded-14.5 shadow-lg rounded-20 border-info">
-    <div class="col-lg-12 mx-auto mt-3">
+<div class="row rounded-14.5 shadow-lg rounded-20 border-info" >
+    <div class="col-lg-12 mx-auto mt-3" style="width: 80%">
         <div class="bg-white shadow rounded overflow-hidden">
             <div class="px-3 pt-0 pb-4" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.bground}})">
                 <div class="media align-items-end">
@@ -16,10 +16,10 @@
             </div>
         </div>
         <div class="bg-light p-4 row justify-content-between">
-            <div class="col-md-4 ml-0 pl-0">
-                <a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="btn btn-outline-dark btn-lg btn-block"><i class="fa fa-edit">Edit profile</i></a>
+            <div class="col-md-2 ml-0 pl-0">
+                <a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="shadow-sm btn btn-outline-primary btn-lg btn-block"><i class="fa fa-edit">Edit profile</i></a>
             </div>
-            <div class="list-inline mb-0 col-md-4 m-0 p-0" style="color: black;">
+            <div class="list-inline mb-0 col-md-3 m-0 p-0" style="color: black;">
                 <li class="list-inline-item p-2 text-center">
                     <h5 class="font-weight-bold mb-0">{{this.teacher.numCourses}}</h5><small class="text-muted"> <i class="fa fa-book mr-1"></i>Courses</small>
                 </li>
@@ -40,7 +40,7 @@
         <div class="py-4 px-4">
             <div class="d-flex align-items-center justify-content-between mb-3">
                 <h4 id="#courses" class="mb-0">My Courses</h4>
-                <a href="/teacher/addCourse?id={{this.teacher.teacherID}}" class="btn btn-group-sm btn-outline-dark">Add course</a>
+                <a href="/teacher/addCourse?id={{this.teacher.teacherID}}" class="btn btn-group-sm btn-outline-primary">Add course</a>
             </div>
             <div class="row">
                     {{#if this.empty}}
@@ -55,14 +55,27 @@
                                     {{#each this.courses}}
                                         <div class="col-lg-4 mb-4">
                                             <a href="/course/{{courseID}}_{{courseName}}">
-                                                <div class="card" style="height: 320px;">
-                                                        <img src="https://drive.google.com/uc?export=view&id={{image}}" alt="" class="card-img-top">
-                                                    <div class="card-body">
-                                                        <h5 class="card-title">{{courseName}}</h5>
+                                                <div class="shadow card" style=" border-style:double" >
+                                                        <img src="https://drive.google.com/uc?export=view&id={{image}}" alt="" height="200px" class="card-img-top">
+                  
+                                                    <div class="card-body" >
+                                                        <div style="display: flex; justify-content:space-between">
+                                                        <h5 class="text-dark card-title">{{courseName}}</h5>
+                                                        {{#if completed}}
+                                                        <span class="text-success">Completed <i class="fa fa-check-circle-o" aria-hidden="true"></i></span>
+                                                        
+                                                        {{else}}
+                                                        <span class="text-success">Updating <i class="fa fa-book" aria-hidden="true"></i></span>
+                                                        {{/if}}
+                                                        </div>
+                                                        <small>
                                                         {{{description}}}
-                                                        <a href="/teacher/editCourse?id={{courseID}}" class="btn btn-outline-success btn-sm">Edit</a>
+                                                        </small>
+                                                        <a href="/lectures/add?id={{courseID}}" class="btn btn-outline-primary btn-sm"><i class="fa fa-pencil" aria-hidden="true"></i>  Upload</a>
+                                                        <a href="/teacher/editCourse?id={{courseID}}" class="btn btn-outline-success btn-sm"><i class="fa fa-cogs" aria-hidden="true"></i>  Edit</a>
                                                         <a href="/teacher/delCourse?id={{courseID}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash"></i>Delete</a>
-                                        </div>
+
+                                                    </div>
                                                 </div>
                                             </a>
                                         </div>
