--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -42,14 +42,12 @@
               </div>
               <div class="col-md-4">
                 <div class="form-group">
-                  <label for="instructor">Instructor</label>
+                  <label>Instructor</label>
                   <input
                     type="text"
-                    name="instructor"
                     class="form-control"
                     value="{{this.teacher.teacherName}}"
                     placeholder="{{this.teacher.teacherName}}"
-                    id="instructor"
                     readonly
                   />
                 </div>
@@ -57,7 +55,7 @@
                 <div class="col-md-2">
                     <label for="teacherNumber">Instructor ID:</label>
                     <div class="form-group">
-                        <input class="form-control" name="teacherNumber" type="text" placeholder="{{this.teacher.teacherID}}" value="{{this.teacher.teacherID}}" id="instructorID" readonly/>
+                        <input class="form-control" name="teacherID" type="text" placeholder="{{this.teacher.teacherID}}" value="{{this.teacher.teacherID}}" id="instructorID" readonly/>
                     </div>
                 </div>
               <div class="col-md-6">
