Fix some conflicts
- lectures route

--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -181,7 +181,7 @@
                                         <i class="fa fa-{{#if isCompleted}}check-square{{else}}square-o{{/if}} " aria-hidden="true"  data-lecture = "{{lecID}}" id="squareAt{{lecID}}"></i>
                                     </div>
 
-                                    <a href="/lectures/{{lecID}}"
+                                    <a href="/lectures/users/{{lecID}}"
                                        class="list-group-item list-group-item-action font-weight-bold text-secondary border-0 {{#if isActive}}bg-secondary text-light{{/if}}">{{lecName}}</a>
                                 </div>
                             {{/each}}
