Get teacher name to categories

--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                     <div role="tabpanel" id="overview" class="tab-pane">
-                        <h3>About this course</h3>
+                        <h3>About this lecture</h3>
                         {{this.lecture.description}}
                     </div>
                     <div role="tabpanel" id="review" class="tab-pane">
