--- a/views/vwUser/details.hbs
+++ b/views/vwUser/details.hbs
@@ -86,7 +86,7 @@
 <p class="card-header d-flex aPath">
   <a class="aPath" href="javascript:;">{{fieldName}}</a>
   <span>&nbsp;&nbsp;❯&nbsp;&nbsp;</span>
-  <a class="aPath" href="/course/category/{{course.catID}}">{{catName}}</a>
+  <a class="aPath" href="/user-courses/category/{{course.catID}}">{{catName}}</a>
 </p>
 
 {{#if empty}}
