--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -1,23 +1,23 @@
 <!--Phan Huy profile view-->
-<div class="row rounded-14.5 shadow-lg rounded-20 border-info" >
+<div class="row rounded-14.5 shadow-lg rounded-20 border-info" style="width: 70%; margin-left:15%">
     <div class="col-lg-12 mx-auto mt-3" style="width: 80%">
         <div class="bg-white shadow rounded overflow-hidden">
             <div class="px-3 pt-0 pb-4" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.bground}})">
                 <div class="media align-items-end">
                     <div class="mr-3 mt-3">
-                        <img style="width: 350px; height: 350px;" src="https://drive.google.com/uc?export=view&id={{this.teacher.avatar}}" alt="This's avatar" class="rounded-circle mb-2 img-thumbnail">
+                        <img style="width: 350px; height: 350px; box-shadow: 2px 2px black;" src="https://drive.google.com/uc?export=view&id={{this.teacher.avatar}}" alt="This's avatar" class="rounded-circle mb-2 img-thumbnail">
                         
                     </div>
                 </div>
                 <div class="media-body mb-5 text-white mt-3">
-                    <strong><h1 class="mt-0 mb-0 font-weight-bold">Dr.{{this.teacher.teacherName}}</h1></strong>
-                    <p class="mb-4 font-weight-bolder">{{this.teacher.teacherBio}}</p>
+                    <strong><h1 class="mt-0 mb-0 font-weight-bold" style="text-shadow:2px 2px black">Dr.{{this.teacher.teacherName}}</h1></strong>
+                    <p class="mb-4 font-weight-bolder" style="text-shadow:2px 2px black">{{this.teacher.teacherBio}}</p>
                 </div>
             </div>
         </div>
         <div class="bg-light p-4 row justify-content-between">
             <div class="col-md-2 ml-0 pl-0">
-                <a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="shadow-sm btn btn-outline-primary btn-lg btn-block"><i class="fa fa-edit">Edit profile</i></a>
+                <a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="shadow-sm btn btn-outline-primary btn-lg btn-block"><i class="fa fa-edit">  Edit profile</i></a>
             </div>
             <div class="list-inline mb-0 col-md-3 m-0 p-0" style="color: black;">
                 <li class="list-inline-item p-2 text-center">
@@ -73,7 +73,7 @@
                                                         </small>
                                                         <a href="/lectures/add?id={{courseID}}" class="btn btn-outline-primary btn-sm"><i class="fa fa-pencil" aria-hidden="true"></i>  Upload</a>
                                                         <a href="/teacher/editCourse?id={{courseID}}" class="btn btn-outline-success btn-sm"><i class="fa fa-cogs" aria-hidden="true"></i>  Edit</a>
-                                                        <a href="/teacher/delCourse?id={{courseID}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash"></i>Delete</a>
+                                                        <a href="/teacher/delCourse?id={{courseID}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash"></i>  Delete</a>
 
                                                     </div>
                                                 </div>
