sua loi ko phai cua minh

--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -4,7 +4,7 @@
         document.querySelector("textarea").focus(); //set the focus - cursor at end
         document.querySelector("textarea").setSelectionRange(0,0); // place cursor at start
 
-        var userID = {{lcUserID}};
+        var userID = {{authUser.userID}};
         
 
         $('#dropdownbtn').on('click', function (id) {
