--- a/views/layouts/main1.hbs
+++ b/views/layouts/main1.hbs
@@ -73,7 +73,7 @@
 
           {{#ifCond authUser.role "==" "ROLE.TEACHER"}}
               <li class="nav-item">
-                  <a class="nav-link" href="/teacher/profile?id=1">Teacher Profile</a>
+                  <a class="nav-link" href="/teacher/getId?id={{authUser.userID}}">Teacher Profile</a>
               </li>
           {{/ifCond}}
 
