--- a/views/home.hbs
+++ b/views/home.hbs
@@ -177,12 +177,12 @@
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev bg-secondary" style="width: 5%" type="button"
+                    <button class="carousel-control-prev bg-secondary" style="width: 2%;" type="button"
                             data-target="#cardslider1" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </button>
-                    <button class="carousel-control-next bg-secondary" style="width: 5%" type="button"
+                    <button class="carousel-control-next bg-secondary" style="width: 2%" type="button"
                             data-target="#cardslider1" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
@@ -192,7 +192,7 @@
 
             <div class="mt-3 ml-3 mr-3 mb-4">
                 <h4 class="bg-light">Khóa học được xem nhiều nhất</h4>
-                <div id="cardslider1" class="carousel slide" data-ride="carousel">
+                <div id="cardslider2" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <div class="card-deck">
@@ -351,13 +351,13 @@
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev bg-secondary" style="width: 5%" type="button"
-                            data-target="#cardslider1" data-slide="prev">
+                    <button class="carousel-control-prev bg-secondary" style="width: 2%" type="button"
+                            data-target="#cardslider2" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </button>
-                    <button class="carousel-control-next bg-secondary" style="width: 5%" type="button"
-                            data-target="#cardslider1" data-slide="next">
+                    <button class="carousel-control-next bg-secondary" style="width: 2%" type="button"
+                            data-target="#cardslider2" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </button>
@@ -366,7 +366,7 @@
 
             <div class="mt-3 ml-3 mr-3 mb-4">
                 <h4 class="bg-light">Khóa học mới nhất</h4>
-                <div id="cardslider1" class="carousel slide" data-ride="carousel">
+                <div id="cardslider3" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <div class="card-deck">
@@ -525,13 +525,13 @@
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev bg-secondary" style="width: 5%" type="button"
-                            data-target="#cardslider1" data-slide="prev">
+                    <button class="carousel-control-prev bg-secondary" style="width: 2%" type="button"
+                            data-target="#cardslider3" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </button>
-                    <button class="carousel-control-next bg-secondary" style="width: 5%" type="button"
-                            data-target="#cardslider1" data-slide="next">
+                    <button class="carousel-control-next bg-secondary" style="width: 2%" type="button"
+                            data-target="#cardslider3" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </button>
@@ -540,7 +540,7 @@
 
             <div class="mt-3 ml-3 mr-3 mb-4">
                 <h4 class="bg-light">Lĩnh vực hot nhất</h4>
-                <div id="cardslider1" class="carousel slide" data-ride="carousel">
+                <div id="cardslider4" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <div class="card-deck">
@@ -699,13 +699,13 @@
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev bg-secondary" style="width: 5%" type="button"
-                            data-target="#cardslider1" data-slide="prev">
+                    <button class="carousel-control-prev bg-secondary" style="width: 2%" type="button"
+                            data-target="#cardslider4" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </button>
-                    <button class="carousel-control-next bg-secondary" style="width: 5%" type="button"
-                            data-target="#cardslider1" data-slide="next">
+                    <button class="carousel-control-next bg-secondary" style="width: 2%" type="button"
+                            data-target="#cardslider4" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </button>
