--- a/views/vwUser/courses.hbs
+++ b/views/vwUser/courses.hbs
@@ -19,6 +19,9 @@
           <div class="col-sm-3 mb-3" type="button">
             <a class="course-card-a" href="/user-courses/detail?catID={{catID}}&id={{courseID}}">
             <div class="course-card">
+                <div class="ribbon">
+                  <span class="ribbon-span">New</span>
+                </div>
                 <img class= "course-card-img" src="https://drive.google.com/uc?export=view&id={{image}}" alt="">
                 <h5 class="course-card-title">{{courseName}}</h5>
                 <p class="course-card-instructor">{{instructor}}</p>
