--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -115,6 +115,25 @@ body{
     opacity: 0.8;
 }
 
+.ribbon {
+    width: 150p;
+    height: 150px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    overflow: hidden;
+}
+
+.ribbon-span {
+    background-color: black;
+    width: 225px;
+    padding: 15px 0;
+    display: block;
+    position: absolute;
+    top: 30px;
+    left: -25px;
+}
+
 .course-card-title {
     margin-bottom: -1px;
 }
