+add form to lectures.hbs

--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -209,7 +209,7 @@
                                     <label for="rate-2" class="fa fa-star"></label>
                                     <input type="radio" name="rate" id="rate-1">
                                     <label for="rate-1" class="fa fa-star"></label>
-                                    <form action="#">
+                                    <form action="/user-courses/user-feedback" method="post">
                                         <header class="headerUserRating"></header>
                                         <div class="textarea" style="height: 100px;width: 100%;overflow: hidden">
                                             <textarea cols="30" style="height: 100%;width: 100%;outline: none;
