+add form to lectures.hbs

--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -212,7 +212,7 @@
                                     <form action="/user-courses/user-feedback" method="post">
                                         <header class="headerUserRating"></header>
                                         <div class="textarea" style="height: 100px;width: 100%;overflow: hidden">
-                                            <textarea cols="30" style="height: 100%;width: 100%;outline: none;
+                                            <textarea name="review" cols="30" style="height: 100%;width: 100%;outline: none;
                                                 border: 1px solid #333; padding: 10px;font-size: 17px; resize: none; border-radius: 5px;
                                             ">
 
