+fix bug choosing many rating at review lectures.hbs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -116,7 +116,7 @@ body{
 }
 
 .ribbon {
-    width: 150p;
+    width: 150px;
     height: 150px;
     position: absolute;
     top: -10px;
@@ -404,6 +404,7 @@ input:checked ~ label {
     color: orange;
 }
 
+
 #rate-1:checked ~ form header:before {
     content: "Awful, not what I expected at all";
 }
@@ -421,6 +422,27 @@ input:checked ~ label {
 }
 
 #rate-5:checked ~ form header:before {
+    content: "Amazing, above expectations!";
+}
+/*/////*/
+#rate-1:checked ~ header:before {
+    content: "Awful, not what I expected at all";
+}
+
+
+#rate-2:checked ~ header:before {
+    content: "Poor, pretty disappointed";
+}
+
+#rate-3:checked ~ header:before {
+    content: "Average, could be better";
+}
+
+#rate-4:checked ~ header:before {
+    content: "Good, what I expected";
+}
+
+#rate-5:checked ~ header:before {
     content: "Amazing, above expectations!";
 }
 
