--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,4 @@
+
 .search-container{
     background: #fff;
     height: 30px;
@@ -96,10 +97,11 @@ body{
 }
 
 .course-card {
+    position: relative;
     background-color: #fff;
 	border:none;
 	border-radius: 10px;
-    height: 350px;
+    height: 355px;
 	width: 300px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 10px;
@@ -112,26 +114,7 @@ body{
 }
 
 .course-card:hover>.course-card-img {
-    opacity: 0.8;
-}
-
-.ribbon {
-    width: 150p;
-    height: 150px;
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    overflow: hidden;
-}
-
-.ribbon-span {
-    background-color: black;
-    width: 225px;
-    padding: 15px 0;
-    display: block;
-    position: absolute;
-    top: 30px;
-    left: -25px;
+    /* opacity: 0.8; */
 }
 
 .course-card-title {
@@ -179,6 +162,20 @@ body{
     margin-bottom: -1px;
 }
 
+.bestseller {
+    padding: 5px;
+    background-color: #F0E68C;
+    font-weight: 700;
+    color: black;
+}
+
+.new {
+    padding: 5px;
+    font-weight: 700;
+    background-color: #B0C4DE;
+    color: black;
+}
+
 .row {
     margin: 0 50px;
 }
@@ -212,7 +209,7 @@ body{
 }
 
 .course-title-info {
-    width: 50%;
+    width: 60%;
 }
 
 .course-title-price {
